[tool.poetry]
name = "eventhelper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

pyTelegramBotAPI = "^4.4.0" # библиотека для создания Telegram ботов

requests = "^2.27.1" # библиотека для создания HTTP запросов

geopy = "^2.2.0" # библиотека для обработки геолокаций и адресов


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
